<?xml version="1.0"?>
<package format="2">
  <name>uoft_hacks</name>
  <version>0.1.0</version>
  <description>Something something something</description>

  <maintainer email="xxx@xxx.edu">xxx aaaa</maintainer>
  <license>MIT</license>
  <author email="xxxx@purdue.edu">xxxx Luo</author>
  <author email="xxx@purdue.edu">xxxx Samantaray</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
